--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/components/Form.css">
     <title>Document</title>
 </head>
 <body>
     
     
-
     <script src="/components/Header.js"></script>
+    <script src="/components/Form.js"></script>
+    <script src="/components/Main.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
