added the pricing section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/components/Main.css"> <!--Main-->
     <link rel="stylesheet" href="/components/Header.css"> <!--Header-->
     <link rel="stylesheet" href="/components/CheckBoxMainChoices.css">   <!-- CheckBoxes -->
-
+<link rel="stylesheet" href="/components/Pricing.css">    <!-- Pricing -->
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 
 
 
-
+<script src="/components/Pricing.js"></script>
     <script src="/components/Div.js"></script>
     <script src="/components/CheckBoxMainChoices.js"></script>
     <script src="/components/Header.js"></script>
