extra work functionality to pricing table added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <script src="/components/Header.js"></script>
     <script src="/components/Form.js"></script>
     <script src="/components/Main.js"></script>
+    <!-- Functions -->
+
+    <!-- func pricing -->
+
+<script src="/functionsForPricing/updateTotals.js"></script>
+    <!-- func pricing end -->
+
+
+    <!-- End of function -->
     <script src="main.js"></script> 
 </body>
 </html>
