added table and the header tr for the table to the root

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="/components/Header.css"> <!--Header-->
     <link rel="stylesheet" href="/components/CheckBoxMainChoices.css">   <!-- CheckBoxes -->
 <link rel="stylesheet" href="/components/Pricing.css">    <!-- Pricing -->
+<link rel="stylesheet" href="/components/TableForCells.css"> <!-- Cells for items -->
+
     <title>Document</title>
 </head>
 <body>
     
 
 
-
+<script src="/components/TableForCells.js"></script>
 <script src="/components/Pricing.js"></script>
     <script src="/components/Div.js"></script>
     <script src="/components/CheckBoxMainChoices.js"></script>
