added the arrowright and did some styles for hiding and appearing on click

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     
     <!-- func pricing -->
     <div class="div-additional-hardware">
-        <p class="p-additional-work hide">Additional Work</p>
-    <ion-icon name="arrow-down-circle-outline" class="arrow-additional-hardware"></ion-icon>
+        <p class="p-additional-work">Additional Work</p>
+    <ion-icon name="arrow-down-circle-outline" class="arrow-additional-hardware arrow-left"></ion-icon>
+    <ion-icon name="arrow-up-circle-outline" class="arrow-additional-hardware  arrow-right hide"></ion-icon>
     </div>
     
 <script src="/functionsForPricing/updateTotals.js"></script>
