worked on transfering the values of the extra work and making sure the work order objects values were passed so that they could be used to in generate PDF event listener

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 
     <!-- End of function -->
     <!-- <script src="path/to/dist/feather.js"></script> -->
+    <script src="PDF/createPDF.js"></script>
     <script src="main.js"></script> 
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.16.0/pdf-lib.min.js"></script>
 </body>
 </html>
