added in the conversion for the cabinets width and height

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <!-- Event listeners external -->
 <script src="/externalEventListeners/arrows.js"></script>
+<script src="/externalEventListeners/buttonConversion.js"></script>
     <!-- End of Event listeners external -->
 
     <script src="main.js"></script> 
