--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 <!-- functions for work order-->
 <script src="/functionsForWorkOrder/createWorkOrder.js"></script>
 <!-- End of functions for work order -->
-
+<!-- Func for converting width and height -->
+<script src="/functionsConversions/buttonConversionWidthHeight.js"></script>
+<!-- End of func for converting width and height -->
 <!-- Pdf funcs -->
 <script src="/pdfFuncs/scopeOfWorkText.js"></script>
 <!-- End of Pdf Funcs -->
@@ -58,7 +60,6 @@
 
     <!-- Event listeners external -->
 <script src="/externalEventListeners/arrows.js"></script>
-<script src="/externalEventListeners/buttonConversion.js"></script>
     <!-- End of Event listeners external -->
 
     <script src="main.js"></script> 
