added more HTML sections for the choices for setting up a location

--- a/orderingTool/index.html
+++ b/orderingTool/index.html
@@ -36,11 +36,13 @@
         <section>
             <h1>To begin ordering, you need to setup a location.</h1>
             <div class="div-location-setup">
+
                 <div class="div-choices">
 
                     <!-- Start of style choices -->
                     <div class="div-choice-for-cabinet-style">
                         <h1>Please choose a cabinet style.</h1>
+
                         <div class="div-choice-wood">
                             <p>Wood</p>
                             <div class="div-image">
@@ -51,19 +53,129 @@
                         <div class="div-choice-unique">
                             <p>Unique</p>
                             <div class="div-image">
-                            <button>Choose</button>
+                                <button>Choose</button>
                             </div>
                         </div>
 
                         <div class="div-choice-odd">
                             <p>Odd</p>
                             <div class="div-image">
-<button>Choose</button>
+                            <button>Choose</button>
                             </div>
                         </div>
-                        
+
                     </div>
                     <!-- end of style -->
+
+<div class="div-for-color-choice">
+
+        <div class="div-choice-crimson-black-silver">
+                            <p>CBS - Crimson Black Silver</p>
+                            <div class="div-image">
+                            </div>
+                                <button>Choose</button>
+                        </div>
+
+                        <div class="div-choice-voilet-teal">
+                            <p>VT - Voilet Teal</p>
+                            <div class="div-image">
+                            </div>
+                                <button>Choose</button>
+                        </div>
+
+                        <div class="div-choice-burnt-orange">
+                            <p>BO - Burnt Orange</p>
+                            <div class="div-image">
+                            </div>
+                            <button>Choose</button>
+                        </div>
+
+                        <div class="div-choice-green-orange-pink">
+                            <p>BO - Green Orange Pink</p>
+                            <div class="div-image">
+                            </div>
+                            <button>Choose</button>
+                        </div>
+
+                        <div class="div-choice-bright-aqua">
+                            <p>BO - Bright Aqua</p>
+                            <div class="div-image">
+                            </div>
+                            <button>Choose</button>
+                        </div>
+</div>
+<!-- End of color selection -->
+
+
+<!-- Hinge overlay -->
+<div class="div-choice-hinge-overlay">
+    <h1>Choose the hinge size that you will be using</h1>
+    <!-- Add radio buttons -->
+
+<!-- End of hinge overlay -->
+
+
+
+<!-- Pull type section -->
+<div class="div-choice-pull-type">
+    <div class="div-choice-">
+        <p>Standard</p>
+        <div class="div-image">
+        </div>
+            <button>Choose</button>
+    </div>
+
+    <div class="div-choice-">
+        <p>Arch</p>
+        <div class="div-image">
+        </div>
+            <button>Choose</button>
+    </div>
+
+    <div class="div-choice-">
+        <p>Knob</p>
+        <div class="div-image">
+        </div>
+        <button>Choose</button>
+    </div>
+
+    <div class="div-choice-">
+        <p>Sundial</p>
+        <div class="div-image">
+        </div>
+        <button>Choose</button>
+    </div>
+
+    <div class="div-choice-bright-aqua">
+        <p>Curved</p>
+        <div class="div-image">
+        </div>
+        <button>Choose</button>
+    </div>
+
+    <div class="div-choice-bright-aqua">
+        <p>Royal</p>
+        <div class="div-image">
+        </div>
+        <button>Choose</button>
+    </div>
+
+    <div class="div-choice-bright-aqua">
+        <p>Ancient</p>
+        <div class="div-image">
+        </div>
+        <button>Choose</button>
+    </div>
+</div>
+</div>
+<!-- End of the pull section -->
+
+
+
+</div>
+
+
+
 
 
                 </div>
