finished the outline for the choice section. wrote some comments for the next sections

--- a/orderingTool/index.html
+++ b/orderingTool/index.html
@@ -112,8 +112,8 @@
     <h1>Choose the hinge size that you will be using</h1>
     <!-- Add radio buttons -->
 
+</div>
 <!-- End of hinge overlay -->
-
 
 
 <!-- Pull type section -->
@@ -167,20 +167,40 @@
         <button>Choose</button>
     </div>
 </div>
-</div>
+
 <!-- End of the pull section -->
 
+<!-- name of location -->
+<div class="div-choice-location-information">
+    <h1>Enter name of location</h1>
+<div class="div-choice-location-form">
+    <form>
+        <label>Location Name</label>
+        <input>
+    </form>
+</div>
+</div>
+<!-- end of location name -->
 
-
+<div class="choice-ready-to-order">
+    <h1>Now that you location is setup, would you like to place an order?</h1>
+    <button>Place Order</button>
 </div>
 
 
 
+</div>
 
-
-                </div>
-            </div>
+                </div>       
         </section>
+        <!-- End of choices section -->
+
+
+        <!-- Next section will be the front interface, which will be the account information, balance ect. -->
+        <!-- && the locations that have been added, with options for modifying, looking at past orders, getting receipts -->
+        <!-- && delete ect.-->
+
+        
 
     </main>
 </body>
