added more the outline and deciding where backend will be used

--- a/orderingTool/client/index.html
+++ b/orderingTool/client/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Welcome to the ordering Application</h1>
     </header>
-
+<!-- Create Account section (backend access =>) -->
     <main>
 
         <h1>Please create an account to begin ordering.</h1>
@@ -30,9 +30,27 @@
                 <input type='text' id="User-birthDate">
                 <submit>Create Account</submit>
         </form>
+        
         </div>
+        <!-- End of account creation -->
+
+        <!-- Section login (backend access =>) -->
+<div class="div-login-container">
+
+    <form>
+        <label>Username</label>
+        <input>
+        <label>Password</label>
+        <input>
+        <submit>Login</submit>
+    </form>
 
 
+</div>
+
+        <!-- End of login -->
+
+<!-- Setting up an account (backend access =>) (only the location is saved to backend, the images ect are frontend.) -->
         <section>
             <h1>To begin ordering, you need to setup a location.</h1>
             <div class="div-location-setup">
@@ -195,12 +213,16 @@
         </section>
         <!-- End of choices section -->
 
+        <!-- Ordering Screen -->
+        <!-- Next section will be the ordering process, which will have a manual, or upload CSV function (possibly copy and paste) -->
 
+
+<!-- Home  -->
         <!-- Next section will be the front interface, which will be the account information, balance ect. -->
         <!-- && the locations that have been added, with options for modifying, looking at past orders, getting receipts -->
         <!-- && delete ect.-->
 
-        
+
 
     </main>
 </body>
