started putting event listeners on the buttons for selecting location

--- a/orderingTool/client/index.html
+++ b/orderingTool/client/index.html
@@ -61,23 +61,23 @@
                     <div class="div-choice-for-cabinet-style">
                         <h1>Please choose a cabinet style.</h1>
 
-                        <div class="div-choice-wood">
+                        <div class="div-choice-cabinet div-choice-wood">
                             <p>Wood</p>
-                            <div class="div-image">
+                            <div class="div-cabinet-image">
                                 <button>Choose</button>
                             </div>
                         </div>
 
-                        <div class="div-choice-unique">
+                        <div class="div-choice-cabinet div-choice-unique">
                             <p>Unique</p>
-                            <div class="div-image">
+                            <div class="div-cabinet-image">
                                 <button>Choose</button>
                             </div>
                         </div>
 
-                        <div class="div-choice-odd">
+                        <div class="div-choice-cabinet div-choice-odd">
                             <p>Odd</p>
-                            <div class="div-image">
+                            <div class="div-cabinet-image">
                             <button>Choose</button>
                             </div>
                         </div>
@@ -87,36 +87,36 @@
 
 <div class="div-for-color-choice">
 
-        <div class="div-choice-crimson-black-silver">
-                            <p>CBS - Crimson Black Silver</p>
+        <div class="div-choice-color div-choice-crimson-black-silver">
+                            <p>Crimson Black Silver</p>
                             <div class="div-image">
                             </div>
                                 <button>Choose</button>
                         </div>
 
-                        <div class="div-choice-voilet-teal">
-                            <p>VT - Voilet Teal</p>
+                        <div class="div-choice-color div-choice-voilet-teal">
+                            <p>Voilet Teal</p>
                             <div class="div-image">
                             </div>
                                 <button>Choose</button>
                         </div>
 
-                        <div class="div-choice-burnt-orange">
-                            <p>BO - Burnt Orange</p>
+                        <div class="div-choice-color div-choice-burnt-orange">
+                            <p>Burnt Orange</p>
                             <div class="div-image">
                             </div>
                             <button>Choose</button>
                         </div>
 
-                        <div class="div-choice-green-orange-pink">
-                            <p>BO - Green Orange Pink</p>
+                        <div class="div-choice-color div-choice-green-orange-pink">
+                            <p>Green Orange Pink</p>
                             <div class="div-image">
                             </div>
                             <button>Choose</button>
                         </div>
 
-                        <div class="div-choice-bright-aqua">
-                            <p>BO - Bright Aqua</p>
+                        <div class="div-choice-color div-choice-bright-aqua">
+                            <p>Bright Aqua</p>
                             <div class="div-image">
                             </div>
                             <button>Choose</button>
@@ -128,7 +128,16 @@
 <!-- Hinge overlay -->
 <div class="div-choice-hinge-overlay">
     <h1>Choose the hinge size that you will be using</h1>
-    <!-- Add radio buttons -->
+    <form>
+        <input type="radio" id="option1" name="group1" value="Option 1">
+        <label for="option1">Option 1</label><br>
+        <input type="radio" id="option2" name="group1" value="Option 2">
+        <label for="option2">Option 2</label><br>
+        <input type="radio" id="option3" name="group1" value="Option 3">
+        <label for="option2">Option 3</label><br>
+        <input type="radio" id="option4" name="group1" value="Option 4">
+        <label for="option2">Option 4</label><br>
+      </form>
 
 </div>
 <!-- End of hinge overlay -->
