--- a/orderingTool/client/index.html
+++ b/orderingTool/client/index.html
@@ -260,7 +260,7 @@
     <div class="div-order-container">
         <h1>Now that you location is setup, would you like to place an order?</h1>
         <button>Place Order</button>
-        <button>Locations</button>
+        <button class="button-display-locations">Locations</button>
     </div>
 </div>
 
@@ -271,7 +271,23 @@
         <!-- End of choices section -->
 
         <!-- Ordering Screen -->
-        <!-- Next section will be the ordering process, which will have a manual, or upload CSV function (possibly copy and paste) -->
+        <h2>Choose a location to begin ordering</h2>
+
+<table id="locationTable">
+    <thead>
+        <tr>
+            <th>Cabinet Type</th>
+            <th>Cabinet Color</th>
+            <th>Hinge Overlay</th>
+            <th>Pull Type</th>
+            <th>Pull Size</th>
+            <th>Location Name</th>
+        </tr>
+    </thead>
+    <tbody id="locationBody">
+        <!-- Table rows will be dynamically populated using JavaScript -->
+    </tbody>
+</table>
 
 
 <!-- Home  -->
@@ -282,6 +298,9 @@
 
 
     </main>
+    <script src="fetchingFunctions/createUser.js"></script>
+    <script src="fetchingFunctions/saveLocation.js"></script>
+    <script src="fetchingFunctions/fetchLocations.js"></script>
     <script src="app.js">
      
         </script>
