cleaned up the main script and cleaned up the HTML

--- a/orderingTool/client/index.html
+++ b/orderingTool/client/index.html
@@ -262,6 +262,17 @@
     <h1>Click the save button to add location</h1>
     <p>Location will be added to locations.</p>
     <button class="button-choice-save-location">Save</button>
+</section>
+
+<!-- end of saving location -->
+
+
+
+
+
+<!-- order or homepage -->
+<section class="section-order-or-homepage">
+
     <div class="div-order-container">
         <h1>Now that you location is setup, would you like to place an order?</h1>
         <button>Place Order</button>
@@ -271,8 +282,8 @@
 
 </div>
 
-                </div>       
-        </section>
+</div>       
+</section>
         <!-- End of choices section -->
 
         <!-- Ordering Screen -->
@@ -303,6 +314,12 @@
 
 
     </main>
+    <script src="eventListeners/Click/chooseColor.js"></script>
+    <script src="eventListeners/Click/chooseTypeOfCabinet.js"></script>
+    <script src="eventListeners/Click/pullType.js"></script>
+    <script src="eventListeners/Click/pullSize.js"></script>
+    <script src="eventListeners/Click/submitLocationsName.js"></script>
+    <script src="eventListeners/Click/radioButtons.js"></script>
     <script src="fetchingFunctions/createUser.js"></script>
     <script src="fetchingFunctions/saveLocation.js"></script>
     <script src="fetchingFunctions/fetchLocations.js"></script>
